unpackaged/main/default/objects/Account_StoreGroup__c/Account_StoreGroup__c.object-meta.xml
<CustomObject>
    <description>Junction Object to link Accounts and Store Groups</description>
    <label>Account StoreGroup</label>
    <nameField>
        <displayFormat>ASG-{0000000}</displayFormat>
        <label>AccountStoreGroup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountStoreGroups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>