unpackaged/main/default/objects/Account_StoreGroup__c/fields/Custom_Store_Group__c.field-meta.xml
<CustomField>
    <fullName>Custom_Store_Group__c</fullName>
    <label>Custom Store Group</label>
    <referenceTo>CustomStoreGroup__c</referenceTo>
    <relationshipLabel>AccountStoreGroups</relationshipLabel>
    <relationshipName>AccountStoreGroups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>