unpackaged/main/default/objects/Account_StoreGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Custom_Store_Group__c</columns>
    <columns>Active__c</columns>
    <columns>Unique_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>